# darling

./: .gitmodules  CMakeLists.txt
etc/: dylib.conf
src/: CMakeLists.txt
src/CFF/: CMakeLists.txt
src/copyfile/: CMakeLists.txt
src/duct/include/: CrashReporterClient.h
src/libc/: CMakeLists.txt
src/libclosure/: CMakeLists.txt  data.c  runtime.c
src/libinfo/: CMakeLists.txt
src/libnotify/: CMakeLists.txt
src/libsystem/: CMakeLists.txt  init.c
src/objc4/runtime/: .objc-os.mm.swp  CMakeLists.txt  NSObject.mm  a1a2-blocktramps-x86_64.S  a2a3-blocktramps-x86_64.S  objc-config.h  objc-errors.mm  objc-internal.h  objc-os.h  objc-os.mm  objc-runtime-new.mm  objc-sel-table.S
src/objc4/runtime/Messengers.subproj/: objc-msg-x86_64.S
src/objc4/runtime/System/: pthread_machdep.h
src/objc4/runtime/extra/: README  encoding.h  encoding2.c
